[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/level_intro.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tiles/test_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://Scripts/intro_spawner.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/alien_static_red_Left.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/alien_static_red_right.tscn" type="PackedScene" id=5]
[ext_resource path="res://Prefabs/alien_staic_green_right.tscn" type="PackedScene" id=6]
[ext_resource path="res://Prefabs/alien_staic_green_Left.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/intro_user_interface.gd" type="Script" id=8]
[ext_resource path="res://Assets/Comfortaa-Bold.ttf" type="DynamicFontData" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -52.9685, 375.536, 0, 0, 0, 0, 1056.02, 374.073 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -48.5797, 335.303, 0, 0, 0, 0, 1053.09, 337.497 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -50.0428, 290.68, 0, 0, 0, 0, 1055.29, 289.948 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -33.9492, 252.641, 0, 0, 0, 0, 1064.8, 251.909 )
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -50.7744, 210.944, 0, 0, 0, 0, 1056.02, 214.602 )
}

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -46.4321, 336.01, 0, 0, 0, 0, 775.906, 338.246, 0, 0, 0, 0, 883.033, 422.587, 0, 0, -2.62794, -12.7017, 882.982, 553.689 )
}

[sub_resource type="DynamicFont" id=7]
size = 28
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 32.2, 38.45 )

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 84, 84 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
collision_layer = 2
collision_mask = 2
format = 1
tile_data = PoolIntArray( -1, 24, 0, -65536, 24, 0, -65535, 24, 0, -65534, 24, 0, -65533, 24, 0, -65532, 24, 0, -65531, 24, 0, -65530, 24, 0, -65529, 24, 0, -65528, 24, 0, -65527, 24, 0, -65526, 24, 0, -65525, 24, 0, -65524, 24, 0, 65535, 24, 0, 0, 1073741825, 0, 1, 1073741825, 0, 2, 1, 0, 3, 1073741825, 0, 4, 1073741825, 0, 5, 1073741825, 0, 6, 1073741825, 0, 7, 1073741825, 0, 8, 1073741825, 0, 9, 1073741825, 0, 10, 1073741825, 0, 11, 1073741825, 0, 12, 24, 0, 131071, 24, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 24, 0, 196607, 26, 0, 131072, 26, 0, 131073, 26, 0, 131074, 26, 0, 131075, 26, 0, 131076, 26, 0, 131077, 26, 0, 131078, 26, 0, 131079, 26, 0, 131080, 26, 0, 131081, 26, 0, 131082, 26, 0, 131083, 26, 0, 131084, 26, 0, 262143, 26, 0, 196608, 26, 0, 196609, 26, 0, 196610, 26, 0, 196611, 26, 0, 196612, 26, 0, 196613, 26, 0, 196614, 26, 0, 196615, 26, 0, 196616, 26, 0, 196617, 26, 0, 196618, 26, 0, 196619, 26, 0, 196620, 26, 0, 327679, 26, 0, 262144, 26, 0, 262145, 26, 0, 262146, 26, 0, 262147, 26, 0, 262148, 26, 0, 262149, 26, 0, 262150, 26, 0, 262151, 26, 0, 262152, 26, 0, 262153, 26, 0, 262154, 26, 0, 262155, 26, 0, 262156, 26, 0, 393215, 24, 0, 327680, 1073741825, 0, 327681, 1073741825, 0, 327682, 1073741825, 0, 327683, 1073741825, 0, 327684, 1073741825, 0, 327685, 1073741825, 0, 327686, 1073741825, 0, 327687, 1073741825, 0, 327688, 1, 0, 327689, 1073741825, 0, 327690, -1610612710, 0, 327691, 1073741825, 0, 327692, 24, 0, 458751, 24, 0, 393216, 1073741825, 0, 393217, 1073741825, 0, 393218, 1073741825, 0, 393219, 1073741825, 0, 393220, 1073741825, 0, 393221, 1073741825, 0, 393222, 1073741825, 0, 393223, 1073741825, 0, 393224, 1, 0, 393225, 1073741825, 0, 393226, -1610612710, 0, 393227, 1073741825, 0, 393228, 24, 0, 524287, 24, 0, 458752, 24, 0, 458753, 24, 0, 458754, 24, 0, 458755, 24, 0, 458756, 24, 0, 458757, 24, 0, 458758, 24, 0, 458759, 24, 0, 458760, 24, 0, 458761, 24, 0, 458762, -1610612710, 0, 458763, 24, 0, 458764, 24, 0 )

[node name="Paths" type="Node" parent="."]
editor/display_folded = true

[node name="Spawner" type="Node" parent="Paths"]
script = ExtResource( 3 )

[node name="Path1" type="Path2D" parent="Paths"]
curve = SubResource( 1 )

[node name="Path2" type="Path2D" parent="Paths"]
curve = SubResource( 2 )

[node name="Path3" type="Path2D" parent="Paths"]
curve = SubResource( 3 )

[node name="Path4" type="Path2D" parent="Paths"]
curve = SubResource( 4 )

[node name="Path5" type="Path2D" parent="Paths"]
curve = SubResource( 5 )

[node name="RalphPath" type="Path2D" parent="Paths"]
curve = SubResource( 6 )

[node name="Aliens" type="Node" parent="."]
editor/display_folded = true

[node name="Node2D" parent="Aliens" instance=ExtResource( 4 )]
position = Vector2( 638.036, 112.808 )
scale = Vector2( 1.88, 1.88 )

[node name="Node2D2" parent="Aliens" instance=ExtResource( 4 )]
position = Vector2( 375.55, 112.76 )
scale = Vector2( 1.88, 1.88 )

[node name="Node2D5" parent="Aliens" instance=ExtResource( 5 )]
position = Vector2( 551.435, 110.758 )
scale = Vector2( 1.88018, 1.88018 )

[node name="Node2D6" parent="Aliens" instance=ExtResource( 5 )]
position = Vector2( 123.835, 108.344 )
scale = Vector2( 1.88018, 1.88018 )

[node name="Node2D7" parent="Aliens" instance=ExtResource( 6 )]
position = Vector2( 813.193, 111.294 )
scale = Vector2( 1.88018, 1.88018 )

[node name="Node2D9" parent="Aliens" instance=ExtResource( 6 )]
position = Vector2( 462.12, 108.587 )
scale = Vector2( 1.88018, 1.88018 )

[node name="Node2D8" parent="Aliens" instance=ExtResource( 5 )]
position = Vector2( 967.43, 111.305 )
scale = Vector2( 1.88018, 1.88018 )

[node name="Node2D3" parent="Aliens" instance=ExtResource( 7 )]
position = Vector2( 728.761, 114.565 )
scale = Vector2( 1.88, 1.88 )

[node name="Node2D4" parent="Aliens" instance=ExtResource( 7 )]
position = Vector2( 224.785, 111.098 )
scale = Vector2( 1.88, 1.88 )

[node name="UI" type="Node" parent="."]
script = ExtResource( 8 )

[node name="PlayButton" type="Button" parent="UI"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.1561
margin_top = -68.9927
margin_right = 60.7739
margin_bottom = -38.0527

[node name="Label" type="Label" parent="UI/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "Play"
align = 1

[node name="SkipButton" type="Button" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.1561
margin_top = -68.9927
margin_right = 60.7739
margin_bottom = -38.0527
text = "Skip"

[node name="HintPanel" type="Panel" parent="UI"]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -71.9153
margin_top = -105.557
margin_right = 135.605
margin_bottom = -19.907

[node name="Label" type="Label" parent="UI/HintPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.9343
margin_top = -30.0186
margin_right = 96.0657
margin_bottom = 0.981415
text = "WASD to move.
Your cursor controls direction."

[node name="Button" type="Button" parent="UI/HintPanel"]
margin_left = 155.285
margin_top = 55.4589
margin_right = 196.775
margin_bottom = 77.8889
text = "OK"

[node name="Title" type="Label" parent="UI"]
margin_left = 349.031
margin_top = 22.1607
margin_right = 699.031
margin_bottom = 54.1607
custom_fonts/font = SubResource( 7 )
text = "Ralph's Terrible Mistake"

[node name="Exit" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 881.274, 629.652 )

[node name="Area2D" type="Area2D" parent="Exit"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit/Area2D"]
shape = SubResource( 8 )
[connection signal="pressed" from="UI/PlayButton" to="UI" method="_on_Play_pressed"]
[connection signal="pressed" from="UI/SkipButton" to="UI" method="_on_SkipButton_pressed"]
[connection signal="pressed" from="UI/HintPanel/Button" to="UI" method="_on_WASDHint_pressed"]
[connection signal="body_entered" from="Exit/Area2D" to="." method="_on_ExitArea_body_entered"]
